2011-10-06  Cary Clark  <caryclark@google.com>

        Unreviewed: Update all chromium-mac baseline images that differ only
        in their scrollbar appearance.

        * platform/chromium-mac/css1/basic/comments-expected.png:
        * platform/chromium-mac/css1/basic/containment-expected.png:
        * platform/chromium-mac/css1/basic/id_as_selector-expected.png:
        * platform/chromium-mac/css1/basic/inheritance-expected.png:
        * platform/chromium-mac/css1/box_properties/border-expected.png:
        * platform/chromium-mac/css1/box_properties/border_bottom-expected.png:
        * platform/chromium-mac/css1/box_properties/border_bottom_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_left-expected.png:
        * platform/chromium-mac/css1/box_properties/border_left_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_right_inline-expected.png:
        * platform/chromium-mac/css1/box_properties/border_right_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_style-expected.png:
        * platform/chromium-mac/css1/box_properties/border_top-expected.png:
        * platform/chromium-mac/css1/box_properties/border_top_width-expected.png:
        * platform/chromium-mac/css1/box_properties/border_width-expected.png:
        * platform/chromium-mac/css1/box_properties/clear-expected.png:
        * platform/chromium-mac/css1/box_properties/float_margin-expected.png:
        * platform/chromium-mac/css1/box_properties/height-expected.png:
        * platform/chromium-mac/css1/box_properties/margin-expected.png:
        * platform/chromium-mac/css1/box_properties/margin_bottom-expected.png:
        * platform/chromium-mac/css1/box_properties/margin_inline-expected.png:
        * platform/chromium-mac/css1/box_properties/margin_left-expected.png:
        * platform/chromium-mac/css1/box_properties/margin_right-expected.png: